--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "bootstrap": "^3.4.1",
     "cpy": "^8.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "gulp.spritesmith": "^6.11.0",
     "jquery": "^3.4.1",
     "select2": "^4.0.12",
     "select2-bootstrap-theme": "0.1.0-beta.10",
