--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.1",
+    "gulp.spritesmith": "^6.11.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "pug-lint": "^2.5.0",
@@ -54,8 +55,8 @@
     "bootstrap": "^3.4.1",
     "cpy": "^8.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "gulp.spritesmith": "^6.11.0",
     "jquery": "^3.4.1",
+    "merge-stream": "^2.0.0",
     "select2": "^4.0.12",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "suggestions-jquery": "^19.11.0",
