--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/epixx/start-kit"
+    "url": "https://github.com/AlienAmigo/new.razvitum.ru.git"
   },
   "lint-staged": {
     "*.{js,pug,md}": "editorconfig-cli",
